tests/resource/invalid/type/class/access_unassigned_class_var.mamba
class X
    def z: Int

    def __init__(self) =>
        self.z
